applying multitaging building

--- a/docker/desafios/golang/Dockerfile
+++ b/docker/desafios/golang/Dockerfile
@@ -1,6 +1,11 @@
-FROM scratch
+FROM golang as builder
 
 WORKDIR /var/www
-COPY hello .
+COPY . .
+RUN go build hello.go
+
+FROM scratch
+WORKDIR /var/www
+COPY --from=builder /var/www/hello .
 
 CMD ["./hello"]
