--- a/docker/desafios/node/docker-compose.yaml
+++ b/docker/desafios/node/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
         context: .
       volumes:
         - ./:/usr/src/app
+        - /usr/src/app/node_modules
       tty: true
       container_name: app
       depends_on:
