--- a/clean-architecture/package.json
+++ b/clean-architecture/package.json
@@ -4,16 +4,23 @@
     "@swc/core": "^1.3.30",
     "@swc/jest": "^0.2.24",
     "@types/jest": "^29.4.0",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.4.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "nodemon src/infrastructure/api/server.ts"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
     "@types/uuid": "^9.0.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
