--- a/clean-architecture/package.json
+++ b/clean-architecture/package.json
@@ -4,6 +4,7 @@
     "@swc/core": "^1.3.30",
     "@swc/jest": "^0.2.24",
     "@types/jest": "^29.4.0",
+    "@types/jstoxml": "^2.0.2",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.1",
     "supertest": "^6.3.3",
@@ -20,6 +21,8 @@
     "@types/uuid": "^9.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsontoxml": "^1.0.1",
+    "jstoxml": "^3.2.6",
     "nodemon": "^2.0.22",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.28.0",
